Addes example fetch and tailwind

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Jeeves place</title>
+		<!--Tailwind-->
+		<script src="https://cdn.tailwindcss.com"></script>
+
+		<script src="/scripts/index.js"></script>
 	</head>
 	<body>
-		Hello world
+		<p class="" id="exampleText"></p>
 	</body>
 </html>
